attempt to fix file writing issue on Unix-like OS
git-svn-id: https://svn.win.tue.nl/repos/prom/Packages/PlanningBasedAlignment/Trunk@37248 a68f48d4-8d00-424f-b812-3f22a534a02a